2015-11-15  vaiorabbit  <http://twitter.com/vaiorabbit>

	* ext/opengl_c/rogl_pointer.c|h : Added.
	* ext/opengl_c/rogl_platform.c|h (glXGetCurrentContext, glXGetCurrentDisplay): Added.

2015-11-14  vaiorabbit  <http://twitter.com/vaiorabbit>

	* ext/opengl_c/rogl_platform.c|h : Added.

2015-11-03  vaiorabbit  <http://twitter.com/vaiorabbit>

	* ext/opengl_c/rogl.c (CHECK_PROC_ADDRESS): Added for initialization order issue.
	* sample/DebugOutput: Added.
	* generator/c_generate_command.rb, c_generate_ext_command.rb: Changed naming rule of arguments (glAlphaFragmentOp1ATI, etc. caused conflicts)

2015-10-26  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator/c_generate_command.rb: All arguments now have
	preceding/trailing underscores (Variable names 'near/far' are unusable
	on mingw platform).

	* ext/opengl_c/extconf.rb: '-lopengl32' for wglGetProcAddress.

2015-10-24  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.
	* sample/NamaspaceMigration: Added.
	* Version: 0.5.1.pre (use with opengl-bindings 1.5.1)

2015-10-21  vaiorabbit  <http://twitter.com/vaiorabbit>

	* ext/opengl_c/rogl.c (rogl_method_SetFiddlePointerModule): A trick to use Fiddle::Pointer.
	* sample: Ported samples from original ruby edition.
	* opengl-bindings_c.gemspec: Added dependency (opengl-bindings-1.5.0 or higher)

2015-10-20  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator/c_generate_command.rb: glGetString and glGetStringi now return ruby's string.

2015-10-17  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator/c_generate_common.rb: ptrdiff_t

2015-10-15  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample: Ported some samples from original opengl-bindings.

2015-10-14  vaiorabbit  <http://twitter.com/vaiorabbit>

	* opengl-bindings_c.gemspec: Added.

2015-10-13  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generate_ext_command_list.rb, generate_ext_enum_list.rb: Added.
	* gl.xml: Updated.
